@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** January 20, 2011 **
+Fixed some minor bugs regarding plugins.
+
 ** January 18, 2011 **
 Fixed some minor issues in the creation of the Windows installer.
 
